math-core/src/snapshots/math_core__tests__sup_sup.snap
---
source: math-core/src/lib.rs
expression: x^2^3 y
---
Position: 3
CannotBeUsedHere {
    got: Circumflex,
    correct_place: AfterOpOrIdent,
}
