math-core/src/snapshots/math_core__tests__super_subscript.snap
---
source: math-core/src/lib.rs
expression: x_3^2
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
