math-core/src/snapshots/math_core__tests__super_then_prime.snap
---
source: math-core/src/lib.rs
expression: "f^2'"
---
Position: 3
CannotBeUsedHere {
    got: Prime,
    correct_place: AfterOpOrIdent,
}
