math-core/src/snapshots/math_core__tests__superscript.snap
---
source: math-core/src/lib.rs
expression: x^2
---
<math>
    <msup>
        <mi>x</mi>
        <mn>2</mn>
    </msup>
</math>
