math-core/src/snapshots/math_core__tests__tag_in_aligned.snap
---
source: math-core/src/lib.rs
expression: "\\begin{aligned}\\tag{32}1\\end{aligned}"
---
Position: 15
CannotBeUsedHere {
    got: Tag,
    correct_place: NumberedEnv,
}
