math-core/src/snapshots/math_core__tests__tag_with_empty.snap
---
source: math-core/src/lib.rs
expression: "\\begin{align} x \\tag{} \\\\ y \\end{align}"
---
Position: 20
ExpectedNumber(
    "",
)
