math-core/src/snapshots/math_core__tests__tag_with_non_number.snap
---
source: math-core/src/lib.rs
expression: "\\begin{align}x\\tag{A1}\\end{align}"
---
Position: 18
ExpectedNumber(
    "A1",
)
